refactor: Refine JWT authentication by distinguishing token types, explicitly defining public and protected API routes, and updating security configurations.